--- a/cloudapp/src/main.scss
+++ b/cloudapp/src/main.scss
@@ -9,4 +9,47 @@
 
 @mixin global-styles {
     /* Add global styles here */
+    body {
+        font-family: 'Roboto', sans-serif;
+    }
+
+    // Main titles - H1 (font-weight 500)
+    h1, .main-title {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        color: #000000;
+    }
+
+    // Secondary titles - H2 (font-weight 400)
+    h2, .secondary-title {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        color: #000000;
+    }
+
+    // Running text - light weight (font-weight 300)
+    p, div, span, label, .running-text {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        color: #000000;
+    }
+
+    // Override Material Typography to follow style guide
+    .mat-headline-5 {
+        font-family: 'Roboto', sans-serif !important;
+        font-weight: 500 !important;  // H1 equivalent
+        color: #000000 !important;
+    }
+
+    .mat-headline-6 {
+        font-family: 'Roboto', sans-serif !important;
+        font-weight: 400 !important;  // H2 equivalent
+        color: #000000 !important;
+    }
+
+    .mat-body-1, .mat-body-2 {
+        font-family: 'Roboto', sans-serif !important;
+        font-weight: 300 !important;  // Running text
+        color: #000000 !important;
+    }
 }
